Adjusted hero video width height to ensure no layout shift on load on desktop

--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ video:-ms-controls-panel {
     font-style: normal;
 
     color: white;
-
+    aspect-ratio: 16 / 9;
 
 }
 
